--- a/practice-for-app/tsconfig.json
+++ b/practice-for-app/tsconfig.json
@@ -19,7 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+  "@generated/prisma": ["./src/generated/prisma"],
+  "@prisma/client": ["./src/generated/prisma"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
